--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "@tonaljs/interval": "^4.8.0",
         "@tonaljs/note": "^4.10.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "styled-components": "^5.3.8"
     },
     "devDependencies": {
         "@types/react": "^18.0.27",
