--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "devDependencies": {
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
+        "@types/styled-components": "^5.1.26",
         "@vitejs/plugin-react-swc": "^3.0.0",
         "autoprefixer": "^10.4.13",
         "nanoid": "^4.0.1",
