--- a/package.json
+++ b/package.json
@@ -1,33 +1,28 @@
 {
-    "name": "joe-pass-the-chord",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "preview": "vite preview",
-        "test": "vitest"
-    },
-    "dependencies": {
-        "@tonaljs/chord-detect": "^4.8.0",
-        "@tonaljs/interval": "^4.8.0",
-        "@tonaljs/note": "^4.10.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "styled-components": "^5.3.8"
-    },
-    "devDependencies": {
-        "@types/react": "^18.0.27",
-        "@types/react-dom": "^18.0.10",
-        "@types/styled-components": "^5.1.26",
-        "@vitejs/plugin-react-swc": "^3.0.0",
-        "autoprefixer": "^10.4.13",
-        "nanoid": "^4.0.1",
-        "postcss": "^8.4.21",
-        "tailwindcss": "^3.2.7",
-        "typescript": "^4.9.3",
-        "vite": "^4.1.4",
-        "vitest": "^0.29.2"
-    }
+  "name": "joe-pass-the-chord",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@tonaljs/chord-detect": "^4.8.0",
+    "@tonaljs/interval": "^4.8.0",
+    "@tonaljs/note": "^4.10.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.3",
+    "vite": "^4.1.4"
+  }
 }
