--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@tonaljs/interval": "^4.8.0",
     "@tonaljs/note": "^4.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-guitar": "^1.1.2",
+    "react-guitar-tunings": "^1.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "daisyui": "^3.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
