--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-guitar": "^1.1.2",
-    "react-guitar-tunings": "^1.1.2"
+    "react-guitar-tunings": "^1.1.2",
+    "underscore": "^1.13.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/underscore": "^1.11.5",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "daisyui": "^3.0.0",
