--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-guitar": "^1.1.2",
     "react-guitar-tunings": "^1.1.2",
+    "tailwind-merge": "^1.13.0",
     "underscore": "^1.13.6"
   },
   "devDependencies": {
